# eigenproof-runner

./: .aoi-allowlist  .env  .gitignore  ADVISORY_BOARD.md  AGENTS.md  AUTONOMOUS_LOG.md  Anchor.toml  BLUE_SOUND_ROUTINE_SOP.md  COMMUNITY_CREDENTIALS.md  CONNECTIVITY_CENTER.md  CURRENT_STATE.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  LESSONS_LEARNED.md  MEMORY.md  NOTION_MANAGEMENT_SOP.md  NOTION_SYNC_LOG.md  OPUS_ANALYSIS_BACKUP.md  README.md  SQUAD_ROLES_UPDATE_20260211.md  Solana-Sentinel-Plan.md  USER.md  WHITEPAPER.md  add_100x_report.py  add_leak_fix.py  add_loop_fix.py  add_marketing_report.py  add_web3_skill.py  botmadang_patrol.py  botmadang_post_final.py  botmadang_post_real.py  botmadang_post_v2.py  botmadang_reply.py  bulk_notion_sync.py  check_notion_structure.py  clawrouter_entry.json  cleaning_list.json  create_aoi_nexus_page.py  create_notion_connectivity_db.py  (+67 more)
.clawhub/: lock.json
.gitlab/: ai-flow.yml
.state_backups/: 20260213_115934__memory__SQUAD_DASHBOARD.md
assets/: render_terminal.py
context/: EXPOSURE_TIER_MATRIX_V0_1.md  PUBLIC_CLAIMS_REGISTRY_V0_1.md  TASK_PARKING_LOT.md
eigencloud_eigenproof_runner/: Dockerfile  README.md  policy.json  run_local.sh  runner.py
firecrawl_sentiment/: config.txt
gitlab-hackathon/: ARCHITECTURE.md
memory/: 2026-02-06.md  2026-02-07.md  2026-02-08.md  2026-02-10.md  2026-02-11.md  2026-02-12-0740.md  2026-02-12-dashboard-flush.md  2026-02-12-durable.md  2026-02-12-final.md  2026-02-12-github-governance.md  2026-02-12-morning-save.md  2026-02-12-nightlog.md  (+27 more)
programs/solana_sentinel/: Cargo.toml
(+282 files in other folders)
