[package]
name = "solana-sentinel"
version = "0.1.0"
description = "Fee-Sharing Vault — Solana Sentinel"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_sentinel"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
